--- a/tech-book-club-landing-page/src/pages/index.astro
+++ b/tech-book-club-landing-page/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 // src/pages/index.astro
 import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
+// Removed Header import
 import Hero from '../components/Hero.astro';
 import Features from '../components/Features.astro';
 import ClubInfo from '../components/ClubInfo.astro';
@@ -13,7 +13,7 @@ import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="Tech Book Club - Join Us">
-  <Header />
+  {/* Removed Header component */}
   <main>
     <Hero />
     <Features />
