--- a/tech-book-club-landing-page/src/components/ClubInfo.astro
+++ b/tech-book-club-landing-page/src/components/ClubInfo.astro
@@ -2,17 +2,17 @@
 // src/components/ClubInfo.astro
 import { Image } from 'astro:assets';
 
-// Image paths from src/assets/images/
-const clubInfoImageSrc = '/assets/images/image-not-average-desktop.webp';
-const slackIconSrc = '/assets/images/icon-slack-placeholder.svg'; // Placeholder - No specific icon found in assets
-// const discordIconSrc = '/assets/images/icon-discord-placeholder.svg'; // Removed unused variable
+import notAverageImage from '../assets/images/image-not-average-desktop.webp';
+import githubIcon from '../assets/images/icon-github.svg';
+import slackIcon from '../assets/images/icon-slack.svg';
+import reactIcon from '../assets/images/icon-react.svg';
 ---
 <section class="py-800 px-400 md:px-800">
   <div class="container mx-auto grid md:grid-cols-2 gap-600 items-center">
     {/* Text Content */}
     <div class="space-y-400">
       {/* Heading with styled 'club' */}
-      <h2 class="font-mono font-semibold text-[34px] md:text-[50px] text-neutral-900 leading-[1.3] tracking-[-2px]">
+      <h2 class="font-mono font-semibold text-preset-2-mobile md:text-preset-2 text-neutral-900">
         Not your average book <span class="relative inline-block">
           {/* Orange circle SVG - adjust stroke width, color, size as needed */}
           <svg class="absolute -top-100 -left-100 -right-100 -bottom-050 w-[calc(100%+20px)] h-[calc(100%+15px)] text-light-salmon-500" fill="none" viewBox="0 0 100 40" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
@@ -23,7 +23,7 @@ const slackIconSrc = '/assets/images/icon-slack-placeholder.svg'; // Placeholder
         </span>
       </h2>
       {/* Paragraph text */}
-      <p class="font-sans text-xl text-neutral-700 leading-[1.4] tracking-[-0.5px]">
+      <p class="font-sans text-preset-5 text-neutral-700">
         Connect with a community that speaks your language - from Python to TypeScript and everything in between. Our discussions blend technical depth with practical applications.
       </p>
       {/* Removed old icon section */}
@@ -31,26 +31,17 @@ const slackIconSrc = '/assets/images/icon-slack-placeholder.svg'; // Placeholder
 
     {/* Image container with relative positioning for icons */}
     <div class="relative mt-600 md:mt-0">
-      <Image src={clubInfoImageSrc} alt="People in a meeting discussing" width={600} height={400} class="rounded-12 w-full h-auto object-cover" />
+      <Image src={notAverageImage} alt="People in a meeting discussing" width={600} height={400} class="rounded-12 w-full h-auto object-cover" />
 
-      {/* Floating Icons - Placeholders, adjust positioning (top/left/right/bottom) and icons */}
-      {/* Icon 1 (e.g., Chat) */}
-      <div class="absolute top-[10%] left-[-20px] bg-blue-500 p-100 rounded-full shadow-lg">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 16 16">
-          <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-        </svg>
+      {/* Floating Icons */}
+      <div class="absolute top-[10%] left-[-20px] bg-white p-200 rounded-full shadow-lg">
+        <Image src={slackIcon} alt="Slack" width={24} height={24} />
       </div>
-      {/* Icon 2 (e.g., GitHub) */}
-      <div class="absolute bottom-[20%] left-[-30px] bg-neutral-900 p-100 rounded-full shadow-lg">
-         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 16 16">
-           <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-         </svg>
+      <div class="absolute bottom-[20%] left-[-30px] bg-white p-200 rounded-full shadow-lg">
+        <Image src={githubIcon} alt="GitHub" width={24} height={24} />
       </div>
-       {/* Icon 3 (e.g., React) */}
-      <div class="absolute bottom-[-15px] right-[15%] bg-cyan-500 p-100 rounded-full shadow-lg">
-         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 16 16">
-           <path fill-rule="evenodd" d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16ZM4.646 6.646a.5.5 0 0 1 .708 0L8 9.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 10l2.647 2.646a.5.5 0 0 1-.708.708L8 10.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 10 4.646 7.354a.5.5 0 0 1 0-.708Z"/>
-         </svg>
+      <div class="absolute bottom-[-15px] right-[15%] bg-white p-200 rounded-full shadow-lg">
+        <Image src={reactIcon} alt="React" width={24} height={24} />
       </div>
     </div>
   </div>
