--- a/tech-book-club-landing-page/src/components/Features.astro
+++ b/tech-book-club-landing-page/src/components/Features.astro
@@ -1,56 +1,38 @@
 ---
 // src/components/Features.astro
 import { Image } from 'astro:assets';
-
-// Image paths from src/assets/images/
-const featuresImageSrc = '/assets/images/image-read-together-desktop.webp';
-const checkIconSrc = '/assets/images/icon-check.svg';
+import readTogetherImage from '../assets/images/image-read-together-desktop.webp';
+import checkIcon from '../assets/images/icon-check.svg';
 ---
 <section class="py-800 px-400 md:px-800">
   <div class="container mx-auto grid md:grid-cols-2 gap-600 items-center">
     {/* Image (Order reversed on mobile, handled by grid) */}
     <div class="order-2 md:order-1">
-       <Image src={featuresImageSrc} alt="People reading books together" width={600} height={400} class="rounded-12 w-full h-auto object-cover" />
+       <Image src={readTogetherImage} alt="People reading books together" width={600} height={400} class="rounded-12 w-full h-auto object-cover" />
     </div>
 
     {/* Text Content */}
     <div class="order-1 md:order-2 space-y-400">
       {/* Text Preset 2: Martian Mono, Semibold, 50px/34px, 130% line height, -2px tracking */}
-      <h2 class="font-mono font-semibold text-[34px] md:text-[50px] text-neutral-900 leading-[1.3] tracking-[-2px]">
+      <h2 class="font-mono font-semibold text-preset-2-mobile md:text-preset-2 text-neutral-900">
         Read together, grow together
       </h2>
       <ul class="space-y-200">
         {/* Updated list items: Boxed check icon, Inter font, updated text */}
         <li class="flex items-start space-x-150">
-          {/* Placeholder Boxed Check Icon SVG */}
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16" class="w-200 h-200 mt-050 flex-shrink-0 text-light-salmon-500">
-            <path d="M2.5 0A2.5 2.5 0 0 0 0 2.5v11A2.5 2.5 0 0 0 2.5 16h11a2.5 2.5 0 0 0 2.5-2.5v-11A2.5 2.5 0 0 0 13.5 0h-11zM2 1.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-1zM1.5 13.5a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-.5.5h-1zm13 0a.5.5 0 0 1-.5-.5V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-.5.5h-1z"/>
-            <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
-          </svg>
+          <Image src={checkIcon} alt="" width={20} height={20} class="w-200 h-200 mt-050 flex-shrink-0 text-light-salmon-500" />
           <span class="font-sans text-base text-neutral-700 leading-[1.4] tracking-[-0.5px]">Monthly curated tech reads selected by industry experts</span>
         </li>
         <li class="flex items-start space-x-150">
-          {/* Placeholder Boxed Check Icon SVG */}
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16" class="w-200 h-200 mt-050 flex-shrink-0 text-light-salmon-500">
-            <path d="M2.5 0A2.5 2.5 0 0 0 0 2.5v11A2.5 2.5 0 0 0 2.5 16h11a2.5 2.5 0 0 0 2.5-2.5v-11A2.5 2.5 0 0 0 13.5 0h-11zM2 1.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-1zM1.5 13.5a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-.5.5h-1zm13 0a.5.5 0 0 1-.5-.5V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-.5.5h-1z"/>
-            <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
-          </svg>
+          <Image src={checkIcon} alt="" width={20} height={20} class="w-200 h-200 mt-050 flex-shrink-0 text-light-salmon-500" />
           <span class="font-sans text-base text-neutral-700 leading-[1.4] tracking-[-0.5px]">Virtual and in-person meetups for deep-dive discussions</span>
         </li>
         <li class="flex items-start space-x-150">
-          {/* Placeholder Boxed Check Icon SVG */}
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16" class="w-200 h-200 mt-050 flex-shrink-0 text-light-salmon-500">
-            <path d="M2.5 0A2.5 2.5 0 0 0 0 2.5v11A2.5 2.5 0 0 0 2.5 16h11a2.5 2.5 0 0 0 2.5-2.5v-11A2.5 2.5 0 0 0 13.5 0h-11zM2 1.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-1zM1.5 13.5a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-.5.5h-1zm13 0a.5.5 0 0 1-.5-.5V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-.5.5h-1z"/>
-            <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
-          </svg>
+          <Image src={checkIcon} alt="" width={20} height={20} class="w-200 h-200 mt-050 flex-shrink-0 text-light-salmon-500" />
           <span class="font-sans text-base text-neutral-700 leading-[1.4] tracking-[-0.5px]">Early access to new tech book releases</span>
         </li>
         <li class="flex items-start space-x-150">
-          {/* Placeholder Boxed Check Icon SVG */}
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16" class="w-200 h-200 mt-050 flex-shrink-0 text-light-salmon-500">
-            <path d="M2.5 0A2.5 2.5 0 0 0 0 2.5v11A2.5 2.5 0 0 0 2.5 16h11a2.5 2.5 0 0 0 2.5-2.5v-11A2.5 2.5 0 0 0 13.5 0h-11zM2 1.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-1zM1.5 13.5a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-.5.5h-1zm13 0a.5.5 0 0 1-.5-.5V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-.5.5h-1z"/>
-            <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
-          </svg>
+          <Image src={checkIcon} alt="" width={20} height={20} class="w-200 h-200 mt-050 flex-shrink-0 text-light-salmon-500" />
           <span class="font-sans text-base text-neutral-700 leading-[1.4] tracking-[-0.5px]">Author Q&A sessions with tech thought leaders</span>
         </li>
       </ul>
