refactor(journey): ♻️ replace SVG arrows with image assets for consistency

--- a/tech-book-club-landing-page/src/components/Journey.astro
+++ b/tech-book-club-landing-page/src/components/Journey.astro
@@ -10,26 +10,14 @@
     {/* Steps Grid */}
     <div class="grid grid-cols-1 md:grid-cols-4 gap-x-600 gap-y-400 relative">
       {/* Connecting Arrows - Positioned absolutely between steps */}
-      <div class="hidden md:block absolute top-[20px] left-[calc(25%-15px)] w-[calc(25%+30px)] h-px z-0">
-        {/* Arrow 1 SVG */}
-        <svg width="100%" height="20" viewBox="0 0 200 20" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" class="text-light-salmon-500">
-          <path d="M 0 10 Q 100 0, 200 10" stroke="currentColor" stroke-width="2" fill="none"/>
-          <path d="M 195 5 L 200 10 L 195 15" stroke="currentColor" stroke-width="2" fill="none"/>
-        </svg>
+      <div class="hidden md:block absolute top-[20px] left-[calc(25%-15px)] w-[calc(25%+30px)] h-[26px] z-0">
+        <img src="/src/assets/images/pattern-arrow.svg" alt="" class="w-full h-full" />
       </div>
-      <div class="hidden md:block absolute top-[20px] left-[calc(50%-15px)] w-[calc(25%+30px)] h-px z-0">
-        {/* Arrow 2 SVG */}
-        <svg width="100%" height="20" viewBox="0 0 200 20" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" class="text-light-salmon-500">
-          <path d="M 0 10 Q 100 20, 200 10" stroke="currentColor" stroke-width="2" fill="none"/>
-          <path d="M 195 5 L 200 10 L 195 15" stroke="currentColor" stroke-width="2" fill="none"/>
-        </svg>
+      <div class="hidden md:block absolute top-[20px] left-[calc(50%-15px)] w-[calc(25%+30px)] h-[26px] z-0">
+        <img src="/src/assets/images/pattern-arrow.svg" alt="" class="w-full h-full transform scale-y-[-1]" />
       </div>
-      <div class="hidden md:block absolute top-[20px] left-[calc(75%-15px)] w-[calc(25%+30px)] h-px z-0">
-        {/* Arrow 3 SVG */}
-        <svg width="100%" height="20" viewBox="0 0 200 20" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" class="text-light-salmon-500">
-          <path d="M 0 10 Q 100 0, 200 10" stroke="currentColor" stroke-width="2" fill="none"/>
-          <path d="M 195 5 L 200 10 L 195 15" stroke="currentColor" stroke-width="2" fill="none"/>
-        </svg>
+      <div class="hidden md:block absolute top-[20px] left-[calc(75%-15px)] w-[calc(25%+30px)] h-[26px] z-0">
+        <img src="/src/assets/images/pattern-arrow.svg" alt="" class="w-full h-full" />
       </div>
 
       {/* Step 1 */}
