refactor(club-info): ♻️ replace individual icons with tech logo for clarity

--- a/tech-book-club-landing-page/src/components/ClubInfo.astro
+++ b/tech-book-club-landing-page/src/components/ClubInfo.astro
@@ -3,9 +3,7 @@
 import { Image } from 'astro:assets';
 
 import notAverageImage from '../assets/images/image-not-average-desktop.webp';
-import githubIcon from '../assets/images/icon-github.svg';
-import slackIcon from '../assets/images/icon-slack.svg';
-import reactIcon from '../assets/images/icon-react.svg';
+import logosTech from '../assets/images/logos-tech.svg';
 ---
 <section class="py-800 px-400 md:px-800">
   <div class="container mx-auto grid md:grid-cols-2 gap-600 items-center">
@@ -33,15 +31,9 @@ import reactIcon from '../assets/images/icon-react.svg';
     <div class="relative mt-600 md:mt-0">
       <Image src={notAverageImage} alt="People in a meeting discussing" width={600} height={400} class="rounded-12 w-full h-auto object-cover" />
 
-      {/* Floating Icons */}
-      <div class="absolute top-[10%] left-[-20px] bg-white p-200 rounded-full shadow-lg">
-        <Image src={slackIcon} alt="Slack" width={24} height={24} />
-      </div>
-      <div class="absolute bottom-[20%] left-[-30px] bg-white p-200 rounded-full shadow-lg">
-        <Image src={githubIcon} alt="GitHub" width={24} height={24} />
-      </div>
-      <div class="absolute bottom-[-15px] right-[15%] bg-white p-200 rounded-full shadow-lg">
-        <Image src={reactIcon} alt="React" width={24} height={24} />
+      {/* Tech Logo */}
+      <div class="absolute bottom-[-30px] right-[10%]">
+        <Image src={logosTech} alt="Technology stack logos: TypeScript, GitHub, and React" width={120} height={138} class="w-auto h-auto" />
       </div>
     </div>
   </div>
